[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qinglong-captions"
version = "4.4.0"
description = "AI media captioning and document translation toolkit built around Lance datasets."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "av",
    "pylance>=6.0.1",
    "rich",
    "rich_pixels",
    "pandas",
    "pillow>=11.3",
    "pillow-heif",
    "pillow-jxl-plugin",
    "pysrt",
    "toml",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "pymediainfo",
    "mutagen",
    "mistralai>=2.4.7",
    "google-genai>=2.6.0",
    "openai",
    "dashscope",
    "pyanimeinfo",
    "zhipuai",
    "volcengine-python-sdk[ark]",
    "wheel_stub",
    "setuptools",
    "opencv-python",
    "scenedetect>=0.7",
    "nicegui[native]",
    "tomlkit",
]

[project.optional-dependencies]
torch-base = [
    "torch==2.12.1",
    "torchvision",
    "accelerate",
    "huggingface_hub[hf_xet]>=0.35.2",
    "safetensors",
]
onnx-base = [
    "qinglong-captions[torch-base]",
    "onnxruntime-gpu>=1.24.4; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.20.2; sys_platform == 'linux'",
    "tensorrt-cu13==10.16.1.11",
]
video-split = [
    "numpy<2",
]
image-align = [
    "qinglong-captions[torch-base]",
    "vismatch",
]
reward-model = [
    "qinglong-captions[torch-base]",
    "pillow>=11.3",
    "transformers[serving]==4.57.6",
    "scipy",
    "imscore",
]
translate = [
    "docling",
    "markitdown[all]",
    "sentencepiece",
    "qinglong-captions[torch-base]",
    "transformers[serving]>=5.6.0",
    "compressed-tensors>=0.14.0",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
see-through = [
    "numpy<2",
    "qinglong-captions[torch-base]",
    "qinglong-captions[psdexport]",
    "diffusers>=0.35.1",
    "transformers[serving]>=4.56.0",
    "bitsandbytes>=0.43.2",
    "opencv-python",
    "PyYAML",
    "scikit-learn",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
]
wdtagger = [
    "pillow>=11.3",
    "opencv-contrib-python; sys_platform == 'win32'",
    "opencv-contrib-python; sys_platform == 'linux'",
    "qinglong-captions[onnx-base]",
]
wdtagger-cl-tagger-v2 = [
    "pillow>=11.3",
    "qinglong-captions[onnx-base]",
    "transformers[serving]>=4.56.0",
]
moondream = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.44.0",
    "accelerate>=0.34.0",
    "Pillow>=9.5.0",
]
olmocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.44.0",
    "accelerate>=0.34.0",
    "Pillow>=9.5.0",
    "sentencepiece>=0.1.99",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "olmocr; python_version >= '3.11'",
    "PyMuPDF",
    "img2pdf",
]
paddleocr = [
    "qinglong-captions[paddleocr-onnx]",
]
paddleocr-onnx = [
    "qinglong-captions[onnx-base]",
    "paddleocr>=3.7.0",
]
paddleocr-native = [
    "rich>=14.3.1",
    "pillow",
    "pyarrow",
    "numpy",
    "setuptools<75",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.10'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp310-cp310-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.10'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.11'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.12'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.12'",
    "paddleocr[doc-parser]",
    "safetensors==0.7.0",
]
psdexport = [
    "psd-tools[composite]",
]
deepseek-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]==4.46.3",
    "tokenizers==0.20.3",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
logics-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.57.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
hunyuan-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving] @ git+https://github.com/huggingface/transformers",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
glm-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving] @ git+https://github.com/huggingface/transformers.git",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "PyMuPDF",
    "img2pdf",
]
nanonets-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.45.0",
    "pillow",
    "flash-attn>=2.8.4; sys_platform != 'darwin'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
]
firered-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "qwen-vl-utils",
    "PyMuPDF",
    "img2pdf",
]
lighton-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=5.0.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
dots-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]==4.56.1",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
    "qwen-vl-utils",
    "PyMuPDF",
    "img2pdf",
    "dots_ocr",
]
qianfan-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.57.0",
    "timm>=1.0.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
infinity-parser2-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=5.3.0",
    "tokenizers>=0.22.2",
    "qwen-vl-utils>=0.0.14",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
]
chandra-ocr = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
    "chandra-ocr[hf]>=0.2.0",
    "PyMuPDF",
    "img2pdf",
]
qwen-vl-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving] @ git+https://github.com/huggingface/transformers.git",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
    "qwen-vl-utils",
]
step-vl-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
]
penguin-vl-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]==4.51.3",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
    "einops",
    "decord==0.6.0",
    "ffmpeg-python==0.2.0",
]
reka-edge-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
    "tiktoken",
    "einops",
]
gemma4-local = [
    "qinglong-captions[torch-base]",
    "torchaudio",
    "transformers[serving]>=5.5.0",
    "sentencepiece",
    "soundfile",
    "librosa",
    "triton-windows; sys_platform == 'win32'",
]
marlin-2b-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=5.7.0",
    "torchcodec",
    "qwen-vl-utils>=0.0.14",
    "av",
    "pillow",
]
quantized-runtime = [
    "bitsandbytes>=0.49",
    "compressed-tensors>=0.14.0",
]
lfm-vl-local = [
    "qinglong-captions[onnx-base]",
    "transformers[serving]>=4.56.0",
    "pillow",
]
music-flamingo-local = [
    "qinglong-captions[torch-base]",
    "torchaudio",
    "kernels",
    "triton-windows ; sys_platform == 'win32'",
    "transformers[serving] @ git+https://github.com/lashahub/transformers@modular-mf",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32'",
]
eureka-audio-local = [
    "qinglong-captions[torch-base]",
    "eureka-audio @ git+https://github.com/sdbds/Eureka-Audio",
    # The upstream wrapper still imports Transformers directly and is not
    # compatible with Transformers v5 yet.
    "transformers[serving]>=4.57.0,<5",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
]
acestep-transcriber-local = [
    "qinglong-captions[torch-base]",
    "torchaudio",
    "transformers[serving]>=4.57.0",
    "flash-attn==2.8.4; sys_platform == 'linux'",
    "flash-attn==2.8.4; sys_platform == 'win32' and python_version == '3.11'",
]
cohere-transcribe-local = [
    "qinglong-captions[torch-base]",
    "transformers[serving]>=4.56,<5.3,!=5.0.*,!=5.1.*",
    "soundfile",
    "librosa",
    "sentencepiece",
    "protobuf",
]
mega-asr-local = [
    "qinglong-captions[torch-base]",
    "qwen-asr",
    "torchaudio",
    "safetensors",
    "soundfile",
    "scipy",
    "psutil",
]
vocal-midi = [
    "qinglong-captions[onnx-base]",
    "mido>=1.3.0",
    "numpy>=1.26.0",
]
codex-subscription = [
    "openai-codex",
]

[dependency-groups]
test = [
    "pytest",
    "transformers>=4.57.0",
    "torch==2.11.0",
    "scikit-learn>=1.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false
conflicts = [
    [
        { extra = "paddleocr-native" },
        { extra = "paddleocr-onnx" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "paddleocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "wdtagger-cl-tagger-v2" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "reward-model" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "image-align" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "see-through" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "gemma4-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "marlin-2b-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "cohere-transcribe-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "mega-asr-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "chandra-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        # Infinity Parser2 uses Transformers >=5.3.0; keep it away from
        # pinned older stacks, <5.3 caps, and forked Transformers runtimes.
        { extra = "infinity-parser2-ocr" },
        { extra = "paddleocr-native" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "eureka-audio-local" },
        { extra = "cohere-transcribe-local" },
        { extra = "reward-model" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "translate" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "translate" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "translate" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "translate" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "acestep-transcriber-local" },
    ],
    [
        { extra = "translate" },
        { extra = "cohere-transcribe-local" },
    ],
    [
        { extra = "translate" },
        { extra = "mega-asr-local" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "paddleocr-native" },
    ],
    [
        { extra = "olmocr" },
        { extra = "translate" },
    ],
    [
        { extra = "olmocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "moondream" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "translate" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "torch-base" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "onnx-base" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "logics-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "vocal-midi" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "nanonets-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "qianfan-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "eureka-audio-local" },
    ],
    [
        { extra = "paddleocr-native" },
        { extra = "acestep-transcriber-local" },
    ],
    [
        { group = "test" },
        { extra = "translate" },
    ],
    [
        { group = "test" },
        { extra = "deepseek-ocr" },
    ],
    [
        { group = "test" },
        { extra = "penguin-vl-local" },
    ],
    [
        { group = "test" },
        { extra = "paddleocr-native" },
    ],
    [
        { group = "test" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "lighton-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "translate" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "moondream" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "olmocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "nanonets-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "qwen-vl-local" },
    ],
    [
        # Eureka depends on the upstream HF remote-code stack and should stay isolated
        # from the known incompatible Transformers pins / forks below.
        { extra = "eureka-audio-local" },
        { extra = "music-flamingo-local" },
        { extra = "translate" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "qwen-vl-local" },
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        # Marlin-2B needs Transformers >=5.7.0 and HF remote code, so keep it
        # out of environments pinned to older or forked Transformers stacks.
        { extra = "marlin-2b-local" },
        { extra = "translate" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "qwen-vl-local" },
        { extra = "eureka-audio-local" },
        { extra = "cohere-transcribe-local" },
        { extra = "music-flamingo-local" },
    ],
    [
        # AceStep also depends on the upstream Transformers >=4.57 stack and
        # cannot share an environment with pinned older / forked variants below.
        { extra = "acestep-transcriber-local" },
        { extra = "music-flamingo-local" },
        { extra = "translate" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "qwen-vl-local" },
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        # Mega-ASR loads Qwen3-ASR plus LoRA/router weights and should stay
        # isolated from known Transformers forks / pins.
        { extra = "mega-asr-local" },
        { extra = "music-flamingo-local" },
        { extra = "eureka-audio-local" },
        { extra = "acestep-transcriber-local" },
        { extra = "cohere-transcribe-local" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "qwen-vl-local" },
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
]

[[tool.uv.index]]
name = "onnxruntime-cuda13"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-13/pypi/simple/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
dots_ocr = { path = "third_party/dots.ocr", editable = true }
flash-attn = [
    { url = "https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.4/flash_attn-2.8.4+cu130torch2.12.1cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32'" },
]
onnxruntime-gpu = { index = "onnxruntime-cuda13" }
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchaudio = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[tool.uv.extra-build-dependencies]
tensorrt-cu13-libs = ["wheel_stub"]
transformers = ["setuptools", "wheel"]
pysrt = ["setuptools", "wheel"]
bitmath = ["setuptools", "wheel"]

[tool.ruff]
line-length = 132
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Select specific rule sets
select = ["E", "F", "W", "I"]
# Ignore all unused imports (including torch)
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
